<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maliput_py</name>
  <version>0.1.4</version>
  <description>Maliput bindings</description>
  <maintainer email="andrew.best@tri.global">Andrew Best</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <doc_depend>ament_cmake_doxygen</doc_depend>
  <build_depend>python3</build_depend>

  <depend>maliput</depend>
  <depend>pybind11-dev</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
